--- a/src/styles/components/_Table.scss
+++ b/src/styles/components/_Table.scss
@@ -158,3 +158,22 @@
         border: 1px solid #d2a8b2;
     }
 }
+
+.widget-table {
+    .MuiButton-root {
+        width: 100%;
+    }
+
+    .MuiTableContainer-root {
+        border-radius: 0px;
+        max-height: 400px;
+        overflow-y: auto;
+
+        .MuiTableHead-root {
+            .MuiTableCell-root {
+                background-color: palette(greyscale, 300) !important;
+                color: palette(primary, main) !important;
+            }
+        }
+    }
+}
