--- a/src/styles/components/_Table.scss
+++ b/src/styles/components/_Table.scss
@@ -177,3 +177,12 @@
         }
     }
 }
+
+
+
+.empty-table-body {
+    text-align: center;
+    padding-top: 30px !important;
+    padding-bottom: 30px !important;
+    font-size: 16px;
+}
