--- a/src/styles/components/_Layout.scss
+++ b/src/styles/components/_Layout.scss
@@ -55,4 +55,24 @@
             }
         }
     }
+
+    .user-button {
+        padding: 2px 10px;
+        .user-name {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            line-height: 1rem;
+
+            span~span {
+                font-size: 0.8rem;
+                font-weight: 500;
+            }
+        }
+
+        svg {
+            margin-left: 2px;
+            margin-right: -8px;
+        }
+    }
 }
