--- a/src/styles/pages/_Authentication.scss
+++ b/src/styles/pages/_Authentication.scss
@@ -45,11 +45,28 @@
     justify-content: center;
     align-items: center;
     height: calc(100vh - 50px);
-    padding: 20px 10px;
+    padding: 20px;
 
-    .title {
-        font-size: 2rem;
-        text-align: center;
+    .MuiCard-root {
+        min-width: 500px;
+        min-height: 200px;
+        width: 50%;
+        height: 20%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        box-shadow: shadows(3);
+
+        .title {
+            font-size: 2rem;
+            text-align: center;
+        }
+
+        .subtitle {
+            padding-top: 10px;
+            font-size: 1.3rem;
+        }
     }
 
     .subheading {
