Renamed and added new assessment statuses

--- a/src/styles/components/_Table.scss
+++ b/src/styles/components/_Table.scss
@@ -120,7 +120,7 @@
         border: 1px solid #a6c38f;
     }
 
-    &.assessor-review span {
+    &.ongoing-review span {
         background-color: #B4E9E0;
         color: #386860;
         border: 1px solid #8fc7be;
