--- a/src/styles/pages/_Dashboard.scss
+++ b/src/styles/pages/_Dashboard.scss
@@ -78,7 +78,7 @@
                         border: 1px solid #a6c38f;
                     }
 
-                    &.assessor-review .label {
+                    &.ongoing-review .label {
                         background-color: #B4E9E0;
                         color: #386860;
                         border: 1px solid #8fc7be;
