Added oversight review status and pages

--- a/src/styles/components/_Table.scss
+++ b/src/styles/components/_Table.scss
@@ -132,7 +132,7 @@
         border: 1px solid #a0bad7;
     }
 
-    &.client-review span {
+    &.oversight-review span {
         background-color: #C0AEF5;
         color: #53467c;
         border: 1px solid #9f8dd3;
