--- a/src/styles/pages/_Dashboard.scss
+++ b/src/styles/pages/_Dashboard.scss
@@ -90,7 +90,7 @@
                         border: 1px solid #a0bad7;
                     }
 
-                    &.client-review .label {
+                    &.oversight-review .label {
                         background-color: #C0AEF5;
                         color: #53467c;
                         border: 1px solid #9f8dd3;
