Minor additions to refactor

--- a/src/styles/components/_Assessment.scss
+++ b/src/styles/components/_Assessment.scss
@@ -353,3 +353,9 @@
         margin-right: 8px;
     }
 }
+
+.informational-text {
+    font-style: italic;
+    padding: 5px 0px 15px;
+    font-size: 1rem;
+}
