--- a/src/styles/components/_Layout.scss
+++ b/src/styles/components/_Layout.scss
@@ -25,7 +25,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-
+            width: max-content;
             font-weight: 500;
             font-family: 'Plus Jakarta Sans';
             margin-right: 20px;
