--- a/src/styles/pages/_Dashboard.scss
+++ b/src/styles/pages/_Dashboard.scss
@@ -19,19 +19,22 @@
     .browse-actions {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        padding: 0px 0px 15px;
+        justify-content: center;
+        flex-wrap: wrap;
 
         .browse-add {
             width: auto;
-            padding: 0px;
+            // padding: 0px;
+            flex-grow: 1;
         }
 
         .assessments-filters {
             display: flex;
             flex-direction: row;
-            justify-content: center;
+            justify-content: flex-start;
             padding: 10px 5px;
+            flex-wrap: wrap;
+            margin: 0px 0px 15px;
 
             .assessments-filter {
                 cursor: pointer;
