--- a/src/styles/components/_Layout.scss
+++ b/src/styles/components/_Layout.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
 
     height: 50px;
+    max-height: 50px;
     padding: 10px 20px;
 
     box-shadow: shadows(3);
@@ -20,49 +21,22 @@
         flex-direction: row;
         align-items: center;
         text-align: center;
-
-        .nav-item {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            width: max-content;
-            font-weight: 500;
-            font-family: 'Plus Jakarta Sans';
-            margin-right: 20px;
-            padding: 10px 5px;
-            cursor: pointer;
-
-            .child-label {
-                padding-left: 6px;
-            }
-
-            .count {
-                border-radius: 3px !important;
-                background-color: palette(greyscale, 300) !important;
-                font-size: 0.85rem;
-                font-weight: 600;
-                padding: 1px 5px !important;
-                margin-left: 4px !important;
-            }
-
-            &.active {
-                font-weight: 600 !important;
-                border-radius: shape(borderRadius);
-                border: 1px solid palette(primary, main);
-                padding: 6px 10px;
-                position: relative;
-                box-shadow: shadows(3);
-            }
-        }
     }
 
+
     .user-button {
+        height: 50px;
         padding: 2px 10px;
+
         .user-name {
             display: flex;
             flex-direction: column;
             align-items: flex-end;
             line-height: 1rem;
+
+            span:first-of-type {
+                width: max-content;
+            }
 
             span~span {
                 font-size: 0.8rem;
@@ -74,5 +48,50 @@
             margin-left: 2px;
             margin-right: -8px;
         }
+    }
+
+    .quick-access {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        .MuiIconButton-root {
+            color: palette(primary, main);
+        }
+    }
+}
+
+
+.nav-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: max-content;
+    font-weight: 500;
+    font-family: 'Plus Jakarta Sans';
+    margin-right: 20px;
+    padding: 10px 5px;
+    cursor: pointer;
+
+    .child-label {
+        padding-left: 6px;
+    }
+
+    .count {
+        border-radius: 3px !important;
+        background-color: palette(greyscale, 300) !important;
+        font-size: 0.85rem;
+        font-weight: 600;
+        padding: 1px 5px !important;
+        margin-left: 4px !important;
+    }
+
+    &.active {
+        font-weight: 600 !important;
+        border-radius: shape(borderRadius);
+        border: 1px solid palette(primary, main);
+        padding: 6px 10px;
+        position: relative;
+        box-shadow: shadows(3);
     }
 }
